Fix missing horizontal scrollbar on empty grid
Fixes RM-9672

--- a/axelor-web/src/main/webapp/css/slickgrid.css
+++ b/axelor-web/src/main/webapp/css/slickgrid.css
@@ -450,7 +450,6 @@
 }
 
 .slickgrid-empty-message .grid-canvas {
-  width: 100% !important;
   box-sizing: border-box;
 }
 
